Fix 'main' scaling When page size was lowered, white space appeared on sides when scrolling.

--- a/src/client/css-styles/styles-universal.css
+++ b/src/client/css-styles/styles-universal.css
@@ -38,8 +38,10 @@ html, body {
 }
   
 .main {
-    margin-left: 150px; /*this must stay at least the same width as the sidebar*/
-    width: fill;
+    margin-left: 150px; /* must stay at least the same width as the sidebar */
+    width: auto;
+    overflow-x: scroll;
+    overflow-y: scroll;
     padding: 30px;
     border: 1px;
     background-color: rgb(242, 242, 242);
